1.2-25:
* Added X-Part-Of headers for the ACP crowd.

1.2-24:
* Fixed forgotten module .tocs, yay.

1.2-23:
* 3.3 .toc update.

1.2-22:
* Added subview summary tooltips.
* Made CC breaks not announce in PvP instances.

1.2-21:
* Fixed a major bug in Absorbs mode - swing damage was not considered.
* Adapted healing and death log modes to new heal event format.
* Added a Hide in combat option. Note that the various Hide options do not play along nicely amongst themselves at this time.
* Fixed classcolor text option causing mischief.

1.2-20:
* .toc bump.

1.2-19:
* Increased maximum line count in report popup menu to 25.
* Death log improved.
* Documented a few hidden /skada commands.
* Fix: damage spell breakdown now shows separate entries for pets using same spell as owner (such as Attack).

1.2-18:
* Fixed a Damage spell details bug.
* Hide in PvP now shows Skada windows after exiting a PvP instance.

1.2-17:
* Added options for enabling/disabling columns in a more standardized way.
* Added a command for starting a new segment manually, /skada newsegment.

1.2-16:
* Interrupts and Dispels modes now show the owner for pets.
* Added a crowd control (CC) breaks mode, with optional announce.
* Added a function for manually starting a new segment, saving the current one. Useful for multi-part boss fights.
* Added key bindings for toggling windows, resetting data, and starting a new segment.
* Fixed a bug in Damage Taken mode.
* Fixed a few embeds.xml errors.

1.2-15:
* Now using combat log event flags to determine if we are interested in actors. Should result in a slight performance increase.

1.2-14:
* Fixed title bar font changes affecting game fonts.
* Added an optional button opening the menu in the title bar.
* Added a subview to Damage - damaged mobs, showing who the player damaged.

1.2-13:
* Fixed missing translation for reports.
* New push to get an updated LibFail-1.0 that doesn't fail quite so bad.

1.2-12: